env/tools/prometheus/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: premetheus-alertmanager-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mk.prom-alertmgr.local
  rules:
  - host: mk.prom-alertmgr.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-alert-manager
            port: 
              name: https
